Update move file

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "randomize": "node scripts/random.js",
+    "gen9-update": "node scripts/gen9-moves.js",
     "include-gen9-moves": "node scripts/gen9-moves.js"
   },
   "keywords": [],
