--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "randomize": "node scripts/random.js",
-    "gen9-update": "node scripts/gen9-moves.js",
-    "modpack": "npm install &&npm run gen9-update &&npm run randomize"
+    "randomize": "npm install &&node scripts/random.js",
+    "gen9-update": "npm install &&node scripts/gen9-moves.js",
+    "modpack": "npm run gen9-update &&npm run randomize"
   },
   "keywords": [],
   "author": "",
